// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ScrubNonTokenisedPaymentMethods stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuGetS3ObjectsPolicy",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Bucket83908E77": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketName": "scrub-non-tokenised-payment-methods-code",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "expire-execution-files",
              "Prefix": "executions/",
              "Status": "Enabled",
            },
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "CheckRunMadeProgressLambdaD3686E31": {
      "DependsOn": [
        "CheckRunMadeProgressLambdaServiceRoleDefaultPolicyF833AD9B",
        "CheckRunMadeProgressLambdaServiceRole942F6273",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "scrub-non-tokenised-payment-methods",
            "DRY_RUN": "true",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "scrub-non-tokenised-payment-methods-check-CODE",
        "Handler": "checkRunMadeProgress.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "CheckRunMadeProgressLambdaServiceRole942F6273",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 180,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CheckRunMadeProgressLambdaServiceRole942F6273": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CheckRunMadeProgressLambdaServiceRoleDefaultPolicyF833AD9B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/scrub-non-tokenised-payment-methods",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/scrub-non-tokenised-payment-methods/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CheckRunMadeProgressLambdaServiceRoleDefaultPolicyF833AD9B",
        "Roles": [
          {
            "Ref": "CheckRunMadeProgressLambdaServiceRole942F6273",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Daily6AMRuleE84D7FA2": {
      "Properties": {
        "ScheduleExpression": "cron(0 6 ? * * *)",
        "State": "DISABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
            },
            "Id": "Target0",
            "RoleArn": {
              "Fn::GetAtt": [
                "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleB752588E",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "GetPaymentMethodsToScrubLambdaB572E4A7": {
      "DependsOn": [
        "LambdaRoleDefaultPolicy75625A82",
        "LambdaRole3A44B857",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "scrub-non-tokenised-payment-methods",
            "DRY_RUN": "true",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "scrub-non-tokenised-payment-methods-get-CODE",
        "Handler": "getPaymentMethodsToScrub.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "LambdaRole3A44B857",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 180,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LambdaRole3A44B857": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "RoleName": "scrub-non-tok-pm-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LambdaRoleDefaultPolicy75625A82": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "Bucket83908E77",
                        "Arn",
                      ],
                    },
                    "/executions/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/scrub-non-tokenised-payment-methods",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/scrub-non-tokenised-payment-methods/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LambdaRoleDefaultPolicy75625A82",
        "Roles": [
          {
            "Ref": "LambdaRole3A44B857",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ReadMapRunResults7EABA554": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::scrub-non-tokenised-payment-methods-code/executions/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadMapRunResults7EABA554",
        "Roles": [
          {
            "Ref": "CheckRunMadeProgressLambdaServiceRole942F6273",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ScrubNonTokenisedPaymentMethodsStateMachineRoleDefaultPolicyF3087335",
        "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"GetNonTokenisedPaymentMethodsOnCancelledAccounts","States":{"GetNonTokenisedPaymentMethodsOnCancelledAccounts":{"Next":"ProcessPaymentMethodsInDistributedMap","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "GetPaymentMethodsToScrubLambdaB572E4A7",
                  "Arn",
                ],
              },
              "","Payload":{"filePath.$":"States.Format('executions/{}/payment-methods-to-scrub.json', $$.Execution.StartTime)"}}},"ProcessPaymentMethodsInDistributedMap":{"Type":"Map","Comment":"MaxConcurrency is 1 to stay inside Zuora's limit on requests in flight. ToleratedFailurePercentage is 100 so one bad account does not stop the rest of the run","Next":"GetDistributedMapResult","ItemProcessor":{"ProcessorConfig":{"Mode":"DISTRIBUTED","ExecutionType":"STANDARD"},"StartAt":"ScrubPaymentMethods","States":{"ScrubPaymentMethods":{"End":true,"Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","OutputPath":"$.Payload","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "ScrubPaymentMethodsLambda776F3FD0",
                  "Arn",
                ],
              },
              "","Payload.$":"$"}}}},"MaxConcurrency":1,"ItemReader":{"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::s3:getObject","ReaderConfig":{"InputType":"JSON"},"Parameters":{"Bucket":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Key.$":"States.Format('executions/{}/payment-methods-to-scrub.json', $$.Execution.StartTime)"}},"ItemBatcher":{"MaxItemsPerBatch":1},"ToleratedFailurePercentage":100,"ResultWriter":{"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::s3:putObject","Parameters":{"Bucket":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Prefix.$":"States.Format('executions/{}', $$.Execution.StartTime)"}}},"GetDistributedMapResult":{"Next":"CheckRunMadeProgress","Type":"Task","Resource":"arn:aws:states:::aws-sdk:s3:getObject","Parameters":{"Bucket.$":"$.ResultWriterDetails.Bucket","Key.$":"$.ResultWriterDetails.Key"},"ResultSelector":{"Payload.$":"States.StringToJson($.Body)"},"OutputPath":"$.Payload"},"CheckRunMadeProgress":{"Next":"CheckForFailures","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","ResultPath":null,"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "CheckRunMadeProgressLambdaD3686E31",
                  "Arn",
                ],
              },
              "","Payload.$":"$"}},"CheckForFailures":{"Type":"Choice","Choices":[{"Variable":"$.ResultFiles.FAILED[0]","IsPresent":false,"Next":"AllPaymentMethodsScrubbedSuccessfully"}],"Default":"NotifyTeamSomePaymentMethodsFailed"},"NotifyTeamSomePaymentMethodsFailed":{"End":true,"Type":"Task","ResultPath":"$.TaskResult","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::sns:publish","Parameters":{"TopicArn":"arn:aws:sns:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":alarms-handler-topic-CODE","Message.$":"States.Format('{} - Some non-tokenised payment methods on fully cancelled accounts failed to be scrubbed.\\nYou can review the failures here:\\nhttps://s3.console.aws.amazon.com/s3/object/{}?region={}&prefix={}', 'CODE', '",
              {
                "Ref": "Bucket83908E77",
              },
              "', '",
              {
                "Ref": "AWS::Region",
              },
              "', $.ResultFiles.FAILED[0].Key)","MessageAttributes":{"app":{"DataType":"String","StringValue":"scrub-non-tokenised-payment-methods"},"stage":{"DataType":"String","StringValue":"CODE"}}}},"AllPaymentMethodsScrubbedSuccessfully":{"Type":"Succeed"}},"TimeoutSeconds":3600}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
            "Arn",
          ],
        },
        "StateMachineName": "scrub-non-tokenised-payment-methods-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineDistributedMapPolicy673B79AC": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
              },
            },
            {
              "Action": [
                "states:DescribeExecution",
                "states:StopExecution",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":states:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":execution:",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                            },
                          ],
                        },
                      ],
                    },
                    ":*",
                  ],
                ],
              },
            },
            {
              "Action": "states:RedriveExecution",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":states:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":execution:",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                            },
                          ],
                        },
                      ],
                    },
                    "/*:*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubNonTokenisedPaymentMethodsStateMachineDistributedMapPolicy673B79AC",
        "Roles": [
          {
            "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleB752588E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleDefaultPolicy1E62C51D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleDefaultPolicy1E62C51D",
        "Roles": [
          {
            "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleB752588E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineRoleDefaultPolicyF3087335": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "GetPaymentMethodsToScrubLambdaB572E4A7",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "GetPaymentMethodsToScrubLambdaB572E4A7",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutObject",
                "s3:GetObject",
                "s3:ListMultipartUploadParts",
                "s3:AbortMultipartUpload",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    {
                      "Ref": "Bucket83908E77",
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    {
                      "Ref": "Bucket83908E77",
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "CheckRunMadeProgressLambdaD3686E31",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "CheckRunMadeProgressLambdaD3686E31",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:sns:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":alarms-handler-topic-CODE",
                  ],
                ],
              },
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ScrubPaymentMethodsLambda776F3FD0",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ScrubPaymentMethodsLambda776F3FD0",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubNonTokenisedPaymentMethodsStateMachineRoleDefaultPolicyF3087335",
        "Roles": [
          {
            "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStepFunctionFailureAlarmEA90C468": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "The scheduled job that scrubs non-tokenised payment methods on fully cancelled accounts has failed or timed out. Login to the AWS console and debug the last execution.",
        "AlarmName": "CODE: ScrubNonTokenisedPaymentMethodsStepFunctionExecutionFailure",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "failed + timedOut",
            "Id": "expr_1",
            "ReturnData": true,
          },
          {
            "Id": "failed",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "StateMachineArn",
                    "Value": {
                      "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                    },
                  },
                ],
                "MetricName": "ExecutionsFailed",
                "Namespace": "AWS/States",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "timedOut",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "StateMachineArn",
                    "Value": {
                      "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                    },
                  },
                ],
                "MetricName": "ExecutionsTimedOut",
                "Namespace": "AWS/States",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "GetPaymentMethodsToScrubLambdaB572E4A7",
                  },
                  " lambda:",
                  {
                    "Ref": "ScrubPaymentMethodsLambda776F3FD0",
                  },
                  " lambda:",
                  {
                    "Ref": "CheckRunMadeProgressLambdaD3686E31",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScrubPaymentMethodsLambda776F3FD0": {
      "DependsOn": [
        "ScrubPaymentMethodsLambdaServiceRoleDefaultPolicyFE7ECBDE",
        "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "scrub-non-tokenised-payment-methods",
            "DRY_RUN": "true",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "scrub-non-tokenised-payment-methods-scrub-CODE",
        "Handler": "scrubPaymentMethods.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 180,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ScrubPaymentMethodsLambdaServiceRole97A7FFCD": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScrubPaymentMethodsLambdaServiceRoleDefaultPolicyFE7ECBDE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/scrub-non-tokenised-payment-methods",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/scrub-non-tokenised-payment-methods/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubPaymentMethodsLambdaServiceRoleDefaultPolicyFE7ECBDE",
        "Roles": [
          {
            "Ref": "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ZuoraOAuthSecretsManagerpolicy5448D99B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:CODE/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ZuoraOAuthSecretsManagerpolicy5448D99B",
        "Roles": [
          {
            "Ref": "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`The ScrubNonTokenisedPaymentMethods stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuGetS3ObjectsPolicy",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Bucket83908E77": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketName": "scrub-non-tokenised-payment-methods-prod",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "expire-execution-files",
              "Prefix": "executions/",
              "Status": "Enabled",
            },
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "CheckRunMadeProgressLambdaD3686E31": {
      "DependsOn": [
        "CheckRunMadeProgressLambdaServiceRoleDefaultPolicyF833AD9B",
        "CheckRunMadeProgressLambdaServiceRole942F6273",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "scrub-non-tokenised-payment-methods",
            "DRY_RUN": "false",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "scrub-non-tokenised-payment-methods-check-PROD",
        "Handler": "checkRunMadeProgress.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "CheckRunMadeProgressLambdaServiceRole942F6273",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 180,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CheckRunMadeProgressLambdaServiceRole942F6273": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CheckRunMadeProgressLambdaServiceRoleDefaultPolicyF833AD9B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/scrub-non-tokenised-payment-methods",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/scrub-non-tokenised-payment-methods/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CheckRunMadeProgressLambdaServiceRoleDefaultPolicyF833AD9B",
        "Roles": [
          {
            "Ref": "CheckRunMadeProgressLambdaServiceRole942F6273",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Daily6AMRuleE84D7FA2": {
      "Properties": {
        "ScheduleExpression": "cron(0 6 ? * * *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
            },
            "Id": "Target0",
            "RoleArn": {
              "Fn::GetAtt": [
                "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleB752588E",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "GetPaymentMethodsToScrubLambdaB572E4A7": {
      "DependsOn": [
        "LambdaRoleDefaultPolicy75625A82",
        "LambdaRole3A44B857",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "scrub-non-tokenised-payment-methods",
            "DRY_RUN": "false",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "scrub-non-tokenised-payment-methods-get-PROD",
        "Handler": "getPaymentMethodsToScrub.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "LambdaRole3A44B857",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 180,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LambdaRole3A44B857": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "RoleName": "scrub-non-tok-pm-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LambdaRoleDefaultPolicy75625A82": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "Bucket83908E77",
                        "Arn",
                      ],
                    },
                    "/executions/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/scrub-non-tokenised-payment-methods",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/scrub-non-tokenised-payment-methods/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LambdaRoleDefaultPolicy75625A82",
        "Roles": [
          {
            "Ref": "LambdaRole3A44B857",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ReadMapRunResults7EABA554": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::scrub-non-tokenised-payment-methods-prod/executions/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadMapRunResults7EABA554",
        "Roles": [
          {
            "Ref": "CheckRunMadeProgressLambdaServiceRole942F6273",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "ScrubNonTokenisedPaymentMethodsStateMachineRoleDefaultPolicyF3087335",
        "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"GetNonTokenisedPaymentMethodsOnCancelledAccounts","States":{"GetNonTokenisedPaymentMethodsOnCancelledAccounts":{"Next":"ProcessPaymentMethodsInDistributedMap","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "GetPaymentMethodsToScrubLambdaB572E4A7",
                  "Arn",
                ],
              },
              "","Payload":{"filePath.$":"States.Format('executions/{}/payment-methods-to-scrub.json', $$.Execution.StartTime)"}}},"ProcessPaymentMethodsInDistributedMap":{"Type":"Map","Comment":"MaxConcurrency is 1 to stay inside Zuora's limit on requests in flight. ToleratedFailurePercentage is 100 so one bad account does not stop the rest of the run","Next":"GetDistributedMapResult","ItemProcessor":{"ProcessorConfig":{"Mode":"DISTRIBUTED","ExecutionType":"STANDARD"},"StartAt":"ScrubPaymentMethods","States":{"ScrubPaymentMethods":{"End":true,"Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","OutputPath":"$.Payload","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "ScrubPaymentMethodsLambda776F3FD0",
                  "Arn",
                ],
              },
              "","Payload.$":"$"}}}},"MaxConcurrency":1,"ItemReader":{"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::s3:getObject","ReaderConfig":{"InputType":"JSON"},"Parameters":{"Bucket":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Key.$":"States.Format('executions/{}/payment-methods-to-scrub.json', $$.Execution.StartTime)"}},"ItemBatcher":{"MaxItemsPerBatch":1},"ToleratedFailurePercentage":100,"ResultWriter":{"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::s3:putObject","Parameters":{"Bucket":"",
              {
                "Ref": "Bucket83908E77",
              },
              "","Prefix.$":"States.Format('executions/{}', $$.Execution.StartTime)"}}},"GetDistributedMapResult":{"Next":"CheckRunMadeProgress","Type":"Task","Resource":"arn:aws:states:::aws-sdk:s3:getObject","Parameters":{"Bucket.$":"$.ResultWriterDetails.Bucket","Key.$":"$.ResultWriterDetails.Key"},"ResultSelector":{"Payload.$":"States.StringToJson($.Body)"},"OutputPath":"$.Payload"},"CheckRunMadeProgress":{"Next":"CheckForFailures","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","ResultPath":null,"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::lambda:invoke","Parameters":{"FunctionName":"",
              {
                "Fn::GetAtt": [
                  "CheckRunMadeProgressLambdaD3686E31",
                  "Arn",
                ],
              },
              "","Payload.$":"$"}},"CheckForFailures":{"Type":"Choice","Choices":[{"Variable":"$.ResultFiles.FAILED[0]","IsPresent":false,"Next":"AllPaymentMethodsScrubbedSuccessfully"}],"Default":"NotifyTeamSomePaymentMethodsFailed"},"NotifyTeamSomePaymentMethodsFailed":{"End":true,"Type":"Task","ResultPath":"$.TaskResult","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::sns:publish","Parameters":{"TopicArn":"arn:aws:sns:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":alarms-handler-topic-PROD","Message.$":"States.Format('{} - Some non-tokenised payment methods on fully cancelled accounts failed to be scrubbed.\\nYou can review the failures here:\\nhttps://s3.console.aws.amazon.com/s3/object/{}?region={}&prefix={}', 'PROD', '",
              {
                "Ref": "Bucket83908E77",
              },
              "', '",
              {
                "Ref": "AWS::Region",
              },
              "', $.ResultFiles.FAILED[0].Key)","MessageAttributes":{"app":{"DataType":"String","StringValue":"scrub-non-tokenised-payment-methods"},"stage":{"DataType":"String","StringValue":"PROD"}}}},"AllPaymentMethodsScrubbedSuccessfully":{"Type":"Succeed"}},"TimeoutSeconds":3600}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
            "Arn",
          ],
        },
        "StateMachineName": "scrub-non-tokenised-payment-methods-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineDistributedMapPolicy673B79AC": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
              },
            },
            {
              "Action": [
                "states:DescribeExecution",
                "states:StopExecution",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":states:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":execution:",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                            },
                          ],
                        },
                      ],
                    },
                    ":*",
                  ],
                ],
              },
            },
            {
              "Action": "states:RedriveExecution",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":states:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":execution:",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                            },
                          ],
                        },
                      ],
                    },
                    "/*:*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubNonTokenisedPaymentMethodsStateMachineDistributedMapPolicy673B79AC",
        "Roles": [
          {
            "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleB752588E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleDefaultPolicy1E62C51D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleDefaultPolicy1E62C51D",
        "Roles": [
          {
            "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineEventsRoleB752588E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScrubNonTokenisedPaymentMethodsStateMachineRoleDefaultPolicyF3087335": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "GetPaymentMethodsToScrubLambdaB572E4A7",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "GetPaymentMethodsToScrubLambdaB572E4A7",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:PutObject",
                "s3:GetObject",
                "s3:ListMultipartUploadParts",
                "s3:AbortMultipartUpload",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    {
                      "Ref": "Bucket83908E77",
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::",
                    {
                      "Ref": "Bucket83908E77",
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "CheckRunMadeProgressLambdaD3686E31",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "CheckRunMadeProgressLambdaD3686E31",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:sns:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":alarms-handler-topic-PROD",
                  ],
                ],
              },
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ScrubPaymentMethodsLambda776F3FD0",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ScrubPaymentMethodsLambda776F3FD0",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubNonTokenisedPaymentMethodsStateMachineRoleDefaultPolicyF3087335",
        "Roles": [
          {
            "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineRole9DA0D4EC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScrubNonTokenisedPaymentMethodsStepFunctionFailureAlarmEA90C468": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "The scheduled job that scrubs non-tokenised payment methods on fully cancelled accounts has failed or timed out. Login to the AWS console and debug the last execution.",
        "AlarmName": "PROD: ScrubNonTokenisedPaymentMethodsStepFunctionExecutionFailure",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "failed + timedOut",
            "Id": "expr_1",
            "ReturnData": true,
          },
          {
            "Id": "failed",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "StateMachineArn",
                    "Value": {
                      "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                    },
                  },
                ],
                "MetricName": "ExecutionsFailed",
                "Namespace": "AWS/States",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "timedOut",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "StateMachineArn",
                    "Value": {
                      "Ref": "ScrubNonTokenisedPaymentMethodsStateMachineA2C3CBC6",
                    },
                  },
                ],
                "MetricName": "ExecutionsTimedOut",
                "Namespace": "AWS/States",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "GetPaymentMethodsToScrubLambdaB572E4A7",
                  },
                  " lambda:",
                  {
                    "Ref": "ScrubPaymentMethodsLambda776F3FD0",
                  },
                  " lambda:",
                  {
                    "Ref": "CheckRunMadeProgressLambdaD3686E31",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScrubPaymentMethodsLambda776F3FD0": {
      "DependsOn": [
        "ScrubPaymentMethodsLambdaServiceRoleDefaultPolicyFE7ECBDE",
        "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "scrub-non-tokenised-payment-methods",
            "DRY_RUN": "false",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "scrub-non-tokenised-payment-methods-scrub-PROD",
        "Handler": "scrubPaymentMethods.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 180,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ScrubPaymentMethodsLambdaServiceRole97A7FFCD": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "scrub-non-tokenised-payment-methods",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScrubPaymentMethodsLambdaServiceRoleDefaultPolicyFE7ECBDE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/scrub-non-tokenised-payment-methods/scrub-non-tokenised-payment-methods.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/scrub-non-tokenised-payment-methods",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/scrub-non-tokenised-payment-methods/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScrubPaymentMethodsLambdaServiceRoleDefaultPolicyFE7ECBDE",
        "Roles": [
          {
            "Ref": "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ZuoraOAuthSecretsManagerpolicy5448D99B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:PROD/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ZuoraOAuthSecretsManagerpolicy5448D99B",
        "Roles": [
          {
            "Ref": "ScrubPaymentMethodsLambdaServiceRole97A7FFCD",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
